[tool.poetry]
name = "pyarchiver"
version = "0.1.0"
description = "PyArchiver is a simple Python-based backup CLI utility designed to archive your files. It can copy a list of files or folders and create password-protected archives."
authors = ["Cap0n3 <cap0n3@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
py7zr = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
